[package]
name = "quantitative-mapping"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
chrono-tz = "0.8"
csv = "1.3"
itertools = "0.12"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tabled = "0.15"
statrs = "0.16"

[profile.release]
lto = true
codegen-units = 1